--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Tabla Ejemplo</title>
     <link rel="stylesheet" href="css.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
   <h1>Table Example Page</h1>
@@ -11,7 +12,7 @@
   <table>
       <tr>
           <td rowspan="2">
-              <img src="OIP.jpeg" id="foto">
+              <img src="OIP.jpeg" id="foto" alt="Foto de camello">
           </td>
           <td colspan="4">
               <h1>Camelid comparison</h1>
